# Stellar_HelloWorld

./: README.md
python-client/: python-client.py  requirements.txt
smartcontract/: Cargo.toml
smartcontract/src/: lib.rs  test.rs
web3js-client/: .env  .env.example  DummyClient.js  Sac.js  Sac2.js  callMethod.js  client.js  depositeFun.js  expressClient.js  expressServer.js  fileClient.js  helloServer.js  package-lock.json  package.json  paymentClientFile.js  paymentServer.js  paymentSign.js  paymentSignClient.js  signClient.js  signTransaction.js  submitTrx.js  temporary.js  testServer.js  vaultReq.js
web3js-client/Santy/: add.js  addfootprint.js  encode.js  main.js  test.js  test2.js  vault.js  wasm.js  xdrConverter.js
web3js-client/Santy/utilities/: base32.js  base64.js  bytes.js  hex.js
web3js-client/test_hello/: hello1.js  hello2.js  world1.js
