[package]
name = "soroban-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "0.1.0"

[dev_dependencies]
soroban-sdk = { version = "0.1.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# The testutils test utilities are automatically enabled inside Rust unit tests inside the same crate as your contract. If you write Rust integration tests, or write tests from another crate, you'll need to add #[cfg(feature = "testutils")] to those tests and enable the testutils feature when running your tests with cargo test --features testutils to be able to use those test utilities.
# wasm-opt -Oz \
#     target/wasm32-unknown-unknown/release/soroban_hello_world.wasm \
#     -o target/wasm32-unknown-unknown/release/soroban_hello_world_optimized.wasm